wp_derive/tests/error_missing_sparse_prefix_from_wp_contextual_field.stderr
error: WPContextualField field types need to start with 'Sparse' prefix
 --> tests/error_missing_sparse_prefix_from_wp_contextual_field.rs:9:17
  |
9 |     bar: Option<Bar>,
  |                 ^^^
