wp_derive/tests/error_missing_sparse_prefix_from_wp_contextual_field.rs
// If a field is marked with `#[WPContextualField]` it needs to be a Sparse type

use wp_derive::WPContextual;

#[derive(WPContextual)]
pub struct SparseFoo {
    #[WPContext("edit")]
    #[WPContextualField]
    bar: Option<Bar>,
}

pub struct Bar {}

fn main() {}

uniffi::setup_scaffolding!("wp_derive");
